--- a/res/layout/relative_two_by_two.xml
+++ b/res/layout/relative_two_by_two.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
     
       <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imageViewA"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentTop="true"
@@ -12,7 +12,7 @@
             android:src="@android:drawable/picture_frame" />
         
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/imageViewB"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentTop="true"
@@ -21,7 +21,7 @@
         
 
      <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/imageViewC"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentBottom="true"
@@ -29,7 +29,7 @@
             android:src="@android:drawable/picture_frame" />
         
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/imageViewD"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentBottom="true"
