--- a/res/layout/two_by_two.xml
+++ b/res/layout/two_by_two.xml
@@ -12,14 +12,14 @@
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerInside"
             android:layout_weight="1" />
         
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerInside"
             android:layout_weight="1" />
         
@@ -33,14 +33,14 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerInside"
             android:layout_weight="1" />
         
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerInside"
             android:layout_weight="1" />
         
