--- a/res/layout/two_by_two.xml
+++ b/res/layout/two_by_two.xml
@@ -13,14 +13,14 @@
             android:id="@+id/imageView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:layout_weight="1" />
         
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:layout_weight="1" />
         
 
@@ -34,14 +34,14 @@
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:layout_weight="1" />
         
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:layout_weight="1" />
         
     </LinearLayout>
