--- a/res/layout/two_by_two.xml
+++ b/res/layout/two_by_two.xml
@@ -10,14 +10,14 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageViewA"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:layout_weight="1" />
         
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageViewB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
@@ -31,14 +31,14 @@
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal" >
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageViewC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:layout_weight="1" />
         
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imageViewD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
