--- a/res/layout/two_by_two.xml
+++ b/res/layout/two_by_two.xml
@@ -13,37 +13,35 @@
             android:id="@+id/imageViewA"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:layout_weight="1" />
-        
+            android:layout_weight="1"
+            android:scaleType="centerCrop" />
+
         <ImageView
             android:id="@+id/imageViewB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:layout_weight="1" />
-        
-
+            android:layout_weight="1"
+            android:scaleType="centerCrop" />
     </LinearLayout>
-    
+
     <LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
         <ImageView
             android:id="@+id/imageViewC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:layout_weight="1" />
-        
+            android:layout_weight="1"
+            android:scaleType="centerCrop" />
+
         <ImageView
             android:id="@+id/imageViewD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:layout_weight="1" />
-        
+            android:layout_weight="1"
+            android:scaleType="centerCrop" />
     </LinearLayout>
-    
+
 </LinearLayout>
