Progress dialog removed

--- a/res/layout/main_fragment.xml
+++ b/res/layout/main_fragment.xml
@@ -13,5 +13,10 @@
         android:divider="@null"
         android:dividerHeight="0px" >
     </ListView>
-
+    
+    <include
+        android:id="@android:id/empty"
+        layout="@layout/empty" >
+    </include>
+    
 </RelativeLayout>
