--- a/res/layout/comment_list_item.xml
+++ b/res/layout/comment_list_item.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="8dp" >
 
     <ImageView
         android:id="@+id/commentUserPhotoView"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/ic_userpic" />
-
+        android:src="@drawable/ic_userpic" 
+        android:layout_marginRight="8dp"/>
+
     <TextView
         android:id="@+id/commentUserNameView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/commentUserPhotoView"
+        android:gravity="top"
         android:text="User Name"
-        android:textStyle="bold"
-        android:textSize="10sp" />
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/commentBodyView"
@@ -26,7 +29,9 @@
         android:layout_alignLeft="@+id/commentUserNameView"
         android:layout_below="@+id/commentUserNameView"
         android:text="Comment Body"
-        android:textSize="10sp" />
+        android:layout_toLeftOf="@+id/likeImageView"
+        android:textSize="12sp" 
+        android:layout_marginRight="8dp"/>
 
     <TextView
         android:id="@+id/likeCountView"
@@ -34,16 +39,18 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/commentBodyView"
         android:layout_alignParentRight="true"
-        android:textColor="#979797"
         android:text="0"
-        android:textSize="8sp" />
-    
+        android:textColor="#979797"
+        android:textSize="8sp" 
+        android:visibility="gone"/>
+
     <ImageView
         android:id="@+id/likeImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/commentBodyView"
         android:layout_toLeftOf="@+id/likeCountView"
-        android:src="@drawable/ic_heart" />
+        android:src="@drawable/ic_heart"
+        android:visibility="gone"/>
 
 </RelativeLayout>
