--- a/res/layout/photo_header.xml
+++ b/res/layout/photo_header.xml
@@ -11,22 +11,24 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:padding="8dp" >
 
         <ImageView
             android:id="@+id/headerUserPhotoView"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:minHeight="48dp"
-            android:minWidth="48dp"
-            android:src="@android:drawable/alert_dark_frame" />
+            android:src="@android:drawable/alert_dark_frame" 
+            android:layout_marginRight="8dp"/>
 
         <TextView
             android:id="@+id/headerUserNameView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Name"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:textColor="#3589A7" />
     </LinearLayout>
 
 </LinearLayout>
