--- a/res/layout/photo_header.xml
+++ b/res/layout/photo_header.xml
@@ -12,7 +12,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp" >
+        android:paddingLeft="8dp" 
+        android:paddingRight="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="24dp">
 
         <ImageView
             android:id="@+id/headerUserPhotoView"
@@ -28,7 +31,7 @@
             android:text="User Name"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:textColor="#3589A7" />
+            android:textColor="#333" />
     </LinearLayout>
 
 </LinearLayout>
