--- a/res/layout/photo_header.xml
+++ b/res/layout/photo_header.xml
@@ -12,26 +12,68 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp" 
+        android:paddingBottom="24dp"
+        android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="24dp">
+        android:paddingTop="8dp" >
 
         <ImageView
             android:id="@+id/headerUserPhotoView"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@android:drawable/alert_dark_frame" 
-            android:layout_marginRight="8dp"/>
+            android:layout_marginRight="8dp"
+            android:src="@android:drawable/alert_dark_frame" />
 
         <TextView
             android:id="@+id/headerUserNameView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="User Name"
+            android:textColor="#333"
             android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="#333" />
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/viewsCountView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:drawableLeft="@drawable/ic_view"
+                android:gravity="center_vertical"
+                android:text="100"
+                android:textColor="#9C9A9B"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/votesCountView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:drawableLeft="@drawable/ic_vote"
+                android:gravity="center_vertical"
+                android:text="100"
+                android:textColor="#9C9A9B"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/favsCountView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_fav"
+                android:gravity="center_vertical"
+                android:text="100"
+                android:textColor="#9C9A9B"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
