--- a/res/layout/main_fragment.xml
+++ b/res/layout/main_fragment.xml
@@ -6,10 +6,8 @@
 
     <ListView
         android:id="@android:id/list"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:divider="@null"
         android:dividerHeight="0px" >
     </ListView>
