--- a/res/layout/photo_header.xml
+++ b/res/layout/photo_header.xml
@@ -2,12 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
     android:orientation="vertical" >
 
     <com.nyuen.test_fivehundred.StretchImageView
         android:id="@+id/headerPhotoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/headerDescriptionView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Description"
+        android:textColor="#333"
+        android:textSize="12sp" 
+        android:padding="8dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,15 +35,43 @@
             android:layout_marginRight="8dp"
             android:src="@android:drawable/alert_dark_frame" />
 
-        <TextView
-            android:id="@+id/headerUserNameView"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="User Name"
-            android:textColor="#333"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/headerUserNameView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User Name"
+                android:textColor="#333"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+            
+            <TextView
+                android:id="@+id/headerDateView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="#333"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/ratingView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:drawableBottom="@drawable/pulse"
+            android:gravity="center_horizontal"
+            android:text="99.9"
+            android:textColor="#9C9A9B"
+            android:textSize="21sp"
+            android:textStyle="bold"
+            android:layout_marginRight="8dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
