--- a/res/layout/photo_header.xml
+++ b/res/layout/photo_header.xml
@@ -10,20 +10,11 @@
         android:id="@+id/headerPhotoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/headerDescriptionView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:textColor="#333"
-        android:textSize="12sp" 
-        android:padding="8dp"/>
-
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="24dp"
+        android:paddingBottom="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:paddingTop="8dp" >
@@ -49,12 +40,11 @@
                 android:textColor="#333"
                 android:textSize="14sp"
                 android:textStyle="bold" />
-            
+
             <TextView
                 android:id="@+id/headerDateView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
                 android:textColor="#333"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -65,13 +55,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
+            android:layout_marginRight="8dp"
             android:drawableBottom="@drawable/pulse"
             android:gravity="center_horizontal"
             android:text="99.9"
             android:textColor="#9C9A9B"
             android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_marginRight="8dp" />
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -114,5 +104,16 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/headerDescriptionView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="24dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:text="Description"
+        android:textColor="#333"
+        android:textSize="12sp" />
 
 </LinearLayout>
