--- a/res/layout/empty.xml
+++ b/res/layout/empty.xml
@@ -2,14 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical" >
 
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/emptyProgressBar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/emptyErrorView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         />
+        android:text="Unable to connect"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:visibility="invisible" />
 
 </LinearLayout>
