--- a/res/layout/comment_list_item.xml
+++ b/res/layout/comment_list_item.xml
@@ -31,7 +31,7 @@
         android:layout_below="@+id/commentUserNameView"
         android:text="Comment Body"
         android:textSize="12sp" />
-
+
     <TextView
         android:id="@+id/likeCountView"
         android:layout_width="wrap_content"
@@ -39,10 +39,11 @@
         android:layout_above="@+id/commentBodyView"
         android:layout_alignParentRight="true"
         android:drawableLeft="@drawable/ic_heart"
+        android:drawablePadding="2dp"
+        android:gravity="center_vertical"
         android:text="10"
         android:textColor="#979797"
-        android:gravity="center_vertical"
-        android:drawablePadding="2dp"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
