Everything should be fixed

--- a/res/menu/menu_photo_details.xml
+++ b/res/menu/menu_photo_details.xml
@@ -5,7 +5,7 @@
         android:id="@+id/menu_share"
         android:icon="@android:drawable/ic_menu_share"
         android:title="Share"
-        android:showAsAction="withText">
+        android:showAsAction="always">
     </item>
 
 </menu>
