--- a/five00dp/res/layout/photo_header.xml
+++ b/five00dp/res/layout/photo_header.xml
@@ -10,7 +10,9 @@
     <com.nyuen.five00dp.view.StretchImageView
         android:id="@+id/headerPhotoView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="#ffffffff"
+        android:minHeight="128dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -115,130 +117,6 @@
         android:text="Description"
         android:textColor="#333"
         android:textSize="12sp" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:background="@drawable/bg_panel_divider" />
-
-    <Button
-        android:id="@+id/headerMoreInfoButton"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/drawer_button"
-        android:drawableRight="@drawable/ic_arrow_down"
-        android:gravity="left|center_vertical"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:text="MORE INFO"
-        android:textColor="#333"
-        android:textSize="14sp"
-        android:textStyle="bold" />
-
-    <TableLayout
-        android:id="@+id/moreInfoBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp" >
-
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:text="Camera"
-                android:textColor="#9C9A9B" />
-
-            <TextView
-                android:id="@+id/cameraTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="TextView" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:text="Lens"
-                android:textColor="#9C9A9B" />
-
-            <TextView
-                android:id="@+id/lensTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="TextView" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:text="Focal Length"
-                android:textColor="#9C9A9B" />
-
-            <TextView
-                android:id="@+id/flTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="TextView" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:text="Shutter Speed"
-                android:textColor="#9C9A9B" />
-
-            <TextView
-                android:id="@+id/ssTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="TextView" />
-        </TableRow>
-    </TableLayout>
 
     <View
         android:layout_width="wrap_content"
