--- a/five00dp/res/layout/image_grid.xml
+++ b/five00dp/res/layout/image_grid.xml
@@ -4,25 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ImageView
+    <com.nyuen.five00dp.view.FocusableImageView
         android:id="@+id/imageView0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop" />
 
-    <ImageView
+    <com.nyuen.five00dp.view.FocusableImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop" />
 
-    <ImageView
+    <com.nyuen.five00dp.view.FocusableImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop" />
 
-    <ImageView
+    <com.nyuen.five00dp.view.FocusableImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
