Exif info box completed

--- a/five00dp/res/layout/comment_list_item.xml
+++ b/five00dp/res/layout/comment_list_item.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/commentUserPhotoView"
+        android:drawablePadding="8dp"
         android:gravity="top"
         android:textColor="#3589A7"
         android:textSize="12sp"
@@ -29,7 +30,7 @@
         android:layout_alignLeft="@+id/commentUserNameView"
         android:layout_below="@+id/commentUserNameView"
         android:textSize="12sp" />
-
+    
     <TextView
         android:id="@+id/likeCountView"
         android:layout_width="wrap_content"
@@ -42,6 +43,17 @@
         android:text="10"
         android:textColor="#979797"
         android:textSize="12sp"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/imageViewUserAwesome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/commentUserNameView"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="3dp"
+        android:layout_toRightOf="@+id/commentUserNameView"
+        android:src="@drawable/awesome_square"
         android:visibility="gone" />
 
 </RelativeLayout>
