--- a/five00dp/res/layout/photo_header.xml
+++ b/five00dp/res/layout/photo_header.xml
@@ -44,13 +44,14 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/headerDateView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#9C9A9B"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/imageViewAwesome"
+                android:layout_width="40dp"
+                android:layout_height="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/awesome"
+                android:visibility="invisible" />
+
         </LinearLayout>
 
         <TextView
