--- a/five00dp/res/menu/menu_main.xml
+++ b/five00dp/res/menu/menu_main.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    <item android:id="@+id/menu_profile"
+        android:title="@string/menu_profile"
+        android:orderInCategory="1"
+        android:showAsAction="always" 
+        android:icon="@drawable/ic_profile"/>
+
 </menu>
