--- a/five00dp/res/layout/login_activity.xml
+++ b/five00dp/res/layout/login_activity.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/darker_gray">
+    android:background="#F4F4F4">
 
     <LinearLayout
         android:id="@+id/loginPanel"
