--- a/five00dp/res/layout/header_profile.xml
+++ b/five00dp/res/layout/header_profile.xml
@@ -6,26 +6,29 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp" >
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/default_margin"
+        android:layout_marginLeft="@dimen/default_margin"
+        android:layout_marginRight="@dimen/default_margin"
+        android:layout_marginTop="@dimen/default_margin" >
 
         <ImageView
             android:id="@+id/imageViewProfileImage"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:layout_width="104dp"
+            android:layout_height="104dp"
             android:src="@drawable/ic_userpic_big" />
 
         <TextView
             android:id="@+id/textViewProfileName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="4dp"
             android:layout_toRightOf="@+id/imageViewProfileImage"
-            android:text="User Name"
-            android:layout_marginLeft="8dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:minLines="2"
+            android:text="Kounoupis Anastasios"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <ImageView
@@ -34,8 +37,8 @@
             android:layout_height="24dp"
             android:layout_alignBottom="@+id/imageViewProfileImage"
             android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_plus_big"
-            android:visibility="visible" />
+            android:src="@drawable/ic_awesome"
+            android:visibility="invisible" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,78 +48,99 @@
             android:orientation="horizontal" >
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" 
-                android:layout_weight="1">
+                android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="match_parent"
+                    android:id="@+id/textViewProfileAffection"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:text="99999"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:text="9999"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="40sp" />
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text="Affection"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:visibility="gone" >
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/textViewProfileViews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_view"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/textViewProfileLikes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textViewProfileFavs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/textViewProfileComms"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
-
             </LinearLayout>
         </LinearLayout>
-
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/buttonShowBio"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/drawer_button"
+        android:drawableRight="@drawable/ic_arrow_down"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:text="About"
+        android:textAllCaps="true"
+        android:textColor="#333"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" 
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
+        android:layout_marginBottom="@dimen/default_margin"
+        android:layout_marginLeft="@dimen/default_margin"
+        android:layout_marginRight="@dimen/default_margin"
+        android:layout_marginTop="@dimen/default_margin"
+        android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewProfileBio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="About Opuntia: Consumption of cactus pear fruit positively affects the body’s redox balance, decreases oxidative damage to lipids, and improves antioxidant status in healthy humans." />
-
+            android:text="" />
     </LinearLayout>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:background="@drawable/bg_panel_divider" />
 
 </LinearLayout>
