--- a/five00dp/res/menu/menu_profile.xml
+++ b/five00dp/res/menu/menu_profile.xml
@@ -2,10 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_photo_share"
+        android:id="@+id/menu_profile_share"
         android:icon="@android:drawable/ic_menu_share"
         android:title="Share"
         android:showAsAction="always">
     </item>
 
+    <item
+        android:id="@+id/menu_profile_browser"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="Open in browser"
+        android:showAsAction="ifRoom">
+    </item>
 </menu>
