--- a/five00dp/res/layout/header_photo_detail.xml
+++ b/five00dp/res/layout/header_photo_detail.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <ImageView
+            <com.nyuen.five00dp.view.FocusableImageView
                 android:id="@+id/headerUserPhotoView"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
